--- a/home-manager/modules/platforms/macos/ghostty/config
+++ b/home-manager/modules/platforms/macos/ghostty/config
@@ -1,5 +1,5 @@
-background-blur = 64
-background-opacity = 0.800000
+background-blur = 0
+background-opacity = 0.900000
 cursor-style = block
 cursor-style-blink = true
 font-family = Maple Mono NF CN
@@ -10,7 +10,10 @@ keybind = ctrl+shift+v=paste_from_clipboard
 keybind = ctrl+shift+plus=increase_font_size:1
 keybind = ctrl+shift+minus=decrease_font_size:1
 keybind = ctrl+zero=reset_font_size
+keybind = cmd+q=quit
+keybind = cmd+n=new_window
 mouse-hide-while-typing = true
 theme = custom
 window-padding-x = 14
-shell-integration = zsh
+macos-titlebar-style = hidden
+macos-titlebar-proxy-icon = hidden
